--- a/mercando-rest/src/main/resources/ext/gridtemplates/webEntity.vm
+++ b/mercando-rest/src/main/resources/ext/gridtemplates/webEntity.vm
@@ -1,8 +1,8 @@
 <article id="detailResults" class="text-center clearfix">
     <input type="checkbox" name="item_check" class="item_check" value="${item.id}" />
     <a class="thumbnail col-xs-12"
-    #if ($item.typeClass == "folder")
-        href='#?filter={"eq":{"webObject":${item.id}}}'
+    #if ($item.entityRef == "folder")
+        href='#?filter={"eq":{"webEntity":${item.id}}}'
     #else
         href='#?id=${item.id}&tab=1'
     #end
