--- a/mercando-portal/src/main/webapp/css/styles.css
+++ b/mercando-portal/src/main/webapp/css/styles.css
@@ -106,3 +106,10 @@ footer{
     color: #ffffff !important;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25) !important;
 }
+
+#sidebar ul li li a {
+    font-weight: bold !important;
+    font-size: 20px !important;
+    color: brown !important;
+    padding: 11px !important;
+}
